test/classes/forwarding/forwardToNonVar.chpl
use Map;

class C {
  forwarding var map(int, real);
}

var myC = new C();
myC.add(1, 2.3);
